src/sintactico/y.output
   0  $accept : programa $end

   1  programa : definiciones
   2           |

   3  definiciones : definiciones definicion
   4               | definicion

   5  definicion : defVar
   6             | defStruct
   7             | defFuncion

   8  defStruct : "STRUCT" "IDENTIFICADOR" '{' defCampos '}' ';'

   9  defCampos : defCampos "IDENTIFICADOR" ':' tipo ';'
  10            |

  11  tipo : "INT"
  12       | "FLOAT"
  13       | "CHAR"
  14       | "IDENTIFICADOR"
  15       | tipoArray

  16  tipoArray : '[' LITERAL_ENTERO ']' tipo
  17            | '[' LITERAL_ENTERO ']'

  18  defFuncion : "IDENTIFICADOR" '(' parametros ')' tipoRetorno '{' defVarLocales sentencias '}'
  19             | "IDENTIFICADOR" '(' ')' tipoRetorno '{' defVarLocales sentencias '}'

  20  tipoRetorno : ':' tipo
  21              |

  22  parametros : parametros ',' "IDENTIFICADOR" ':' tipo
  23             | "IDENTIFICADOR" ':' tipo

  24  defVarLocales : defVarLocales defVar
  25                |

  26  defVar : "VAR" "IDENTIFICADOR" ':' tipo ';'

  27  sentencias : sentencias sentencia
  28             |

  29  sentencia : expr '=' expr ';'
  30            | escritura ';'
  31            | "READ" expr ';'
  32            | "RETURN" exprOpt ';'
  33            | if
  34            | "WHILE" '(' expr ')' '{' sentencias '}'
  35            | invocacionFuncion ';'

  36  exprOpt : expr
  37          |

  38  escritura : "PRINT" expr
  39            | "PRINTSP" expr
  40            | "PRINTLN" expr

  41  if : "IF" '(' expr ')' '{' sentencias '}'
  42     | "IF" '(' expr ')' '{' sentencias '}' "ELSE" '{' sentencias '}'

  43  invocacionFuncion : "IDENTIFICADOR" '(' listaExprSeparador ')'
  44                    | "IDENTIFICADOR" '(' ')'

  45  listaExprSeparador : listaExprSeparador ',' expr
  46                     | expr

  47  expr : expr '+' expr
  48       | expr '-' expr
  49       | expr '*' expr
  50       | expr '/' expr
  51       | expr MAYORIGUAL expr
  52       | expr MENORIGUAL expr
  53       | expr '<' expr
  54       | expr '>' expr
  55       | expr DISTINTO expr
  56       | expr IGUALDAD expr
  57       | '!' expr
  58       | expr Y expr
  59       | expr O expr
  60       | "IDENTIFICADOR"
  61       | LITERAL_ENTERO
  62       | LITERAL_REAL
  63       | LITERAL_CARACTER
  64       | '(' expr ')'
  65       | '{' expr '}'
  66       | "CAST" '<' tipoBasico '>' expr
  67       | expr '[' expr ']'
  68       | expr '.' "IDENTIFICADOR"
  69       | "IDENTIFICADOR" '(' listaExprSeparador ')'

  70  tipoBasico : "INT"
  71             | "FLOAT"
  72             | "CHAR"

state 0
	$accept : . programa $end  (0)
	programa : .  (2)

	"STRUCT"  shift 1
	"IDENTIFICADOR"  shift 2
	"VAR"  shift 3
	$end  reduce 2

	programa  goto 4
	definiciones  goto 5
	definicion  goto 6
	defVar  goto 7
	defStruct  goto 8
	defFuncion  goto 9


state 1
	defStruct : "STRUCT" . "IDENTIFICADOR" '{' defCampos '}' ';'  (8)

	"IDENTIFICADOR"  shift 10
	.  error


state 2
	defFuncion : "IDENTIFICADOR" . '(' parametros ')' tipoRetorno '{' defVarLocales sentencias '}'  (18)
	defFuncion : "IDENTIFICADOR" . '(' ')' tipoRetorno '{' defVarLocales sentencias '}'  (19)

	'('  shift 11
	.  error


state 3
	defVar : "VAR" . "IDENTIFICADOR" ':' tipo ';'  (26)

	"IDENTIFICADOR"  shift 12
	.  error


state 4
	$accept : programa . $end  (0)

	$end  accept


state 5
	programa : definiciones .  (1)
	definiciones : definiciones . definicion  (3)

	"STRUCT"  shift 1
	"IDENTIFICADOR"  shift 2
	"VAR"  shift 3
	$end  reduce 1

	definicion  goto 13
	defVar  goto 7
	defStruct  goto 8
	defFuncion  goto 9


state 6
	definiciones : definicion .  (4)

	.  reduce 4


state 7
	definicion : defVar .  (5)

	.  reduce 5


state 8
	definicion : defStruct .  (6)

	.  reduce 6


state 9
	definicion : defFuncion .  (7)

	.  reduce 7


state 10
	defStruct : "STRUCT" "IDENTIFICADOR" . '{' defCampos '}' ';'  (8)

	'{'  shift 14
	.  error


state 11
	defFuncion : "IDENTIFICADOR" '(' . parametros ')' tipoRetorno '{' defVarLocales sentencias '}'  (18)
	defFuncion : "IDENTIFICADOR" '(' . ')' tipoRetorno '{' defVarLocales sentencias '}'  (19)

	')'  shift 15
	"IDENTIFICADOR"  shift 16
	.  error

	parametros  goto 17


state 12
	defVar : "VAR" "IDENTIFICADOR" . ':' tipo ';'  (26)

	':'  shift 18
	.  error


state 13
	definiciones : definiciones definicion .  (3)

	.  reduce 3


state 14
	defStruct : "STRUCT" "IDENTIFICADOR" '{' . defCampos '}' ';'  (8)
	defCampos : .  (10)

	.  reduce 10

	defCampos  goto 19


state 15
	defFuncion : "IDENTIFICADOR" '(' ')' . tipoRetorno '{' defVarLocales sentencias '}'  (19)
	tipoRetorno : .  (21)

	':'  shift 20
	'{'  reduce 21

	tipoRetorno  goto 21


state 16
	parametros : "IDENTIFICADOR" . ':' tipo  (23)

	':'  shift 22
	.  error


state 17
	defFuncion : "IDENTIFICADOR" '(' parametros . ')' tipoRetorno '{' defVarLocales sentencias '}'  (18)
	parametros : parametros . ',' "IDENTIFICADOR" ':' tipo  (22)

	')'  shift 23
	','  shift 24
	.  error


state 18
	defVar : "VAR" "IDENTIFICADOR" ':' . tipo ';'  (26)

	'['  shift 25
	"IDENTIFICADOR"  shift 26
	"INT"  shift 27
	"FLOAT"  shift 28
	"CHAR"  shift 29
	.  error

	tipo  goto 30
	tipoArray  goto 31


state 19
	defStruct : "STRUCT" "IDENTIFICADOR" '{' defCampos . '}' ';'  (8)
	defCampos : defCampos . "IDENTIFICADOR" ':' tipo ';'  (9)

	"IDENTIFICADOR"  shift 32
	'}'  shift 33
	.  error


state 20
	tipoRetorno : ':' . tipo  (20)

	'['  shift 25
	"IDENTIFICADOR"  shift 26
	"INT"  shift 27
	"FLOAT"  shift 28
	"CHAR"  shift 29
	.  error

	tipo  goto 34
	tipoArray  goto 31


state 21
	defFuncion : "IDENTIFICADOR" '(' ')' tipoRetorno . '{' defVarLocales sentencias '}'  (19)

	'{'  shift 35
	.  error


state 22
	parametros : "IDENTIFICADOR" ':' . tipo  (23)

	'['  shift 25
	"IDENTIFICADOR"  shift 26
	"INT"  shift 27
	"FLOAT"  shift 28
	"CHAR"  shift 29
	.  error

	tipo  goto 36
	tipoArray  goto 31


state 23
	defFuncion : "IDENTIFICADOR" '(' parametros ')' . tipoRetorno '{' defVarLocales sentencias '}'  (18)
	tipoRetorno : .  (21)

	':'  shift 20
	'{'  reduce 21

	tipoRetorno  goto 37


state 24
	parametros : parametros ',' . "IDENTIFICADOR" ':' tipo  (22)

	"IDENTIFICADOR"  shift 38
	.  error


state 25
	tipoArray : '[' . LITERAL_ENTERO ']' tipo  (16)
	tipoArray : '[' . LITERAL_ENTERO ']'  (17)

	LITERAL_ENTERO  shift 39
	.  error


state 26
	tipo : "IDENTIFICADOR" .  (14)

	.  reduce 14


state 27
	tipo : "INT" .  (11)

	.  reduce 11


state 28
	tipo : "FLOAT" .  (12)

	.  reduce 12


state 29
	tipo : "CHAR" .  (13)

	.  reduce 13


state 30
	defVar : "VAR" "IDENTIFICADOR" ':' tipo . ';'  (26)

	';'  shift 40
	.  error


state 31
	tipo : tipoArray .  (15)

	.  reduce 15


state 32
	defCampos : defCampos "IDENTIFICADOR" . ':' tipo ';'  (9)

	':'  shift 41
	.  error


state 33
	defStruct : "STRUCT" "IDENTIFICADOR" '{' defCampos '}' . ';'  (8)

	';'  shift 42
	.  error


state 34
	tipoRetorno : ':' tipo .  (20)

	.  reduce 20


state 35
	defFuncion : "IDENTIFICADOR" '(' ')' tipoRetorno '{' . defVarLocales sentencias '}'  (19)
	defVarLocales : .  (25)

	.  reduce 25

	defVarLocales  goto 43


state 36
	parametros : "IDENTIFICADOR" ':' tipo .  (23)

	.  reduce 23


state 37
	defFuncion : "IDENTIFICADOR" '(' parametros ')' tipoRetorno . '{' defVarLocales sentencias '}'  (18)

	'{'  shift 44
	.  error


state 38
	parametros : parametros ',' "IDENTIFICADOR" . ':' tipo  (22)

	':'  shift 45
	.  error


state 39
	tipoArray : '[' LITERAL_ENTERO . ']' tipo  (16)
	tipoArray : '[' LITERAL_ENTERO . ']'  (17)

	']'  shift 46
	.  error


state 40
	defVar : "VAR" "IDENTIFICADOR" ':' tipo ';' .  (26)

	.  reduce 26


state 41
	defCampos : defCampos "IDENTIFICADOR" ':' . tipo ';'  (9)

	'['  shift 25
	"IDENTIFICADOR"  shift 26
	"INT"  shift 27
	"FLOAT"  shift 28
	"CHAR"  shift 29
	.  error

	tipo  goto 47
	tipoArray  goto 31


state 42
	defStruct : "STRUCT" "IDENTIFICADOR" '{' defCampos '}' ';' .  (8)

	.  reduce 8


state 43
	defFuncion : "IDENTIFICADOR" '(' ')' tipoRetorno '{' defVarLocales . sentencias '}'  (19)
	defVarLocales : defVarLocales . defVar  (24)
	sentencias : .  (28)

	"VAR"  shift 3
	LITERAL_ENTERO  reduce 28
	LITERAL_REAL  reduce 28
	LITERAL_CARACTER  reduce 28
	'!'  reduce 28
	'('  reduce 28
	"IDENTIFICADOR"  reduce 28
	'{'  reduce 28
	'}'  reduce 28
	"READ"  reduce 28
	"RETURN"  reduce 28
	"WHILE"  reduce 28
	"PRINT"  reduce 28
	"PRINTSP"  reduce 28
	"PRINTLN"  reduce 28
	"IF"  reduce 28
	"CAST"  reduce 28

	defVar  goto 48
	sentencias  goto 49


state 44
	defFuncion : "IDENTIFICADOR" '(' parametros ')' tipoRetorno '{' . defVarLocales sentencias '}'  (18)
	defVarLocales : .  (25)

	.  reduce 25

	defVarLocales  goto 50


state 45
	parametros : parametros ',' "IDENTIFICADOR" ':' . tipo  (22)

	'['  shift 25
	"IDENTIFICADOR"  shift 26
	"INT"  shift 27
	"FLOAT"  shift 28
	"CHAR"  shift 29
	.  error

	tipo  goto 51
	tipoArray  goto 31


state 46
	tipoArray : '[' LITERAL_ENTERO ']' . tipo  (16)
	tipoArray : '[' LITERAL_ENTERO ']' .  (17)

	'['  shift 25
	"IDENTIFICADOR"  shift 26
	"INT"  shift 27
	"FLOAT"  shift 28
	"CHAR"  shift 29
	')'  reduce 17
	'{'  reduce 17
	';'  reduce 17
	','  reduce 17

	tipo  goto 52
	tipoArray  goto 31


state 47
	defCampos : defCampos "IDENTIFICADOR" ':' tipo . ';'  (9)

	';'  shift 53
	.  error


state 48
	defVarLocales : defVarLocales defVar .  (24)

	.  reduce 24


state 49
	defFuncion : "IDENTIFICADOR" '(' ')' tipoRetorno '{' defVarLocales sentencias . '}'  (19)
	sentencias : sentencias . sentencia  (27)

	LITERAL_ENTERO  shift 54
	LITERAL_REAL  shift 55
	LITERAL_CARACTER  shift 56
	'!'  shift 57
	'('  shift 58
	"IDENTIFICADOR"  shift 59
	'{'  shift 60
	'}'  shift 61
	"READ"  shift 62
	"RETURN"  shift 63
	"WHILE"  shift 64
	"PRINT"  shift 65
	"PRINTSP"  shift 66
	"PRINTLN"  shift 67
	"IF"  shift 68
	"CAST"  shift 69
	.  error

	sentencia  goto 70
	expr  goto 71
	escritura  goto 72
	if  goto 73
	invocacionFuncion  goto 74


state 50
	defFuncion : "IDENTIFICADOR" '(' parametros ')' tipoRetorno '{' defVarLocales . sentencias '}'  (18)
	defVarLocales : defVarLocales . defVar  (24)
	sentencias : .  (28)

	"VAR"  shift 3
	LITERAL_ENTERO  reduce 28
	LITERAL_REAL  reduce 28
	LITERAL_CARACTER  reduce 28
	'!'  reduce 28
	'('  reduce 28
	"IDENTIFICADOR"  reduce 28
	'{'  reduce 28
	'}'  reduce 28
	"READ"  reduce 28
	"RETURN"  reduce 28
	"WHILE"  reduce 28
	"PRINT"  reduce 28
	"PRINTSP"  reduce 28
	"PRINTLN"  reduce 28
	"IF"  reduce 28
	"CAST"  reduce 28

	defVar  goto 48
	sentencias  goto 75


state 51
	parametros : parametros ',' "IDENTIFICADOR" ':' tipo .  (22)

	.  reduce 22


state 52
	tipoArray : '[' LITERAL_ENTERO ']' tipo .  (16)

	.  reduce 16


state 53
	defCampos : defCampos "IDENTIFICADOR" ':' tipo ';' .  (9)

	.  reduce 9


state 54
	expr : LITERAL_ENTERO .  (61)

	.  reduce 61


state 55
	expr : LITERAL_REAL .  (62)

	.  reduce 62


state 56
	expr : LITERAL_CARACTER .  (63)

	.  reduce 63


state 57
	expr : '!' . expr  (57)

	LITERAL_ENTERO  shift 54
	LITERAL_REAL  shift 55
	LITERAL_CARACTER  shift 56
	'!'  shift 57
	'('  shift 58
	"IDENTIFICADOR"  shift 76
	'{'  shift 60
	"CAST"  shift 69
	.  error

	expr  goto 77


state 58
	expr : '(' . expr ')'  (64)

	LITERAL_ENTERO  shift 54
	LITERAL_REAL  shift 55
	LITERAL_CARACTER  shift 56
	'!'  shift 57
	'('  shift 58
	"IDENTIFICADOR"  shift 76
	'{'  shift 60
	"CAST"  shift 69
	.  error

	expr  goto 78


state 59
	invocacionFuncion : "IDENTIFICADOR" . '(' listaExprSeparador ')'  (43)
	invocacionFuncion : "IDENTIFICADOR" . '(' ')'  (44)
	expr : "IDENTIFICADOR" .  (60)
	expr : "IDENTIFICADOR" . '(' listaExprSeparador ')'  (69)

	'('  shift 79
	Y  reduce 60
	O  reduce 60
	DISTINTO  reduce 60
	IGUALDAD  reduce 60
	MAYORIGUAL  reduce 60
	MENORIGUAL  reduce 60
	'+'  reduce 60
	'-'  reduce 60
	'*'  reduce 60
	'/'  reduce 60
	'>'  reduce 60
	'<'  reduce 60
	'['  reduce 60
	'.'  reduce 60
	'='  reduce 60


state 60
	expr : '{' . expr '}'  (65)

	LITERAL_ENTERO  shift 54
	LITERAL_REAL  shift 55
	LITERAL_CARACTER  shift 56
	'!'  shift 57
	'('  shift 58
	"IDENTIFICADOR"  shift 76
	'{'  shift 60
	"CAST"  shift 69
	.  error

	expr  goto 80


state 61
	defFuncion : "IDENTIFICADOR" '(' ')' tipoRetorno '{' defVarLocales sentencias '}' .  (19)

	.  reduce 19


state 62
	sentencia : "READ" . expr ';'  (31)

	LITERAL_ENTERO  shift 54
	LITERAL_REAL  shift 55
	LITERAL_CARACTER  shift 56
	'!'  shift 57
	'('  shift 58
	"IDENTIFICADOR"  shift 76
	'{'  shift 60
	"CAST"  shift 69
	.  error

	expr  goto 81


state 63
	sentencia : "RETURN" . exprOpt ';'  (32)
	exprOpt : .  (37)

	LITERAL_ENTERO  shift 54
	LITERAL_REAL  shift 55
	LITERAL_CARACTER  shift 56
	'!'  shift 57
	'('  shift 58
	"IDENTIFICADOR"  shift 76
	'{'  shift 60
	"CAST"  shift 69
	';'  reduce 37

	expr  goto 82
	exprOpt  goto 83


state 64
	sentencia : "WHILE" . '(' expr ')' '{' sentencias '}'  (34)

	'('  shift 84
	.  error


state 65
	escritura : "PRINT" . expr  (38)

	LITERAL_ENTERO  shift 54
	LITERAL_REAL  shift 55
	LITERAL_CARACTER  shift 56
	'!'  shift 57
	'('  shift 58
	"IDENTIFICADOR"  shift 76
	'{'  shift 60
	"CAST"  shift 69
	.  error

	expr  goto 85


state 66
	escritura : "PRINTSP" . expr  (39)

	LITERAL_ENTERO  shift 54
	LITERAL_REAL  shift 55
	LITERAL_CARACTER  shift 56
	'!'  shift 57
	'('  shift 58
	"IDENTIFICADOR"  shift 76
	'{'  shift 60
	"CAST"  shift 69
	.  error

	expr  goto 86


state 67
	escritura : "PRINTLN" . expr  (40)

	LITERAL_ENTERO  shift 54
	LITERAL_REAL  shift 55
	LITERAL_CARACTER  shift 56
	'!'  shift 57
	'('  shift 58
	"IDENTIFICADOR"  shift 76
	'{'  shift 60
	"CAST"  shift 69
	.  error

	expr  goto 87


state 68
	if : "IF" . '(' expr ')' '{' sentencias '}'  (41)
	if : "IF" . '(' expr ')' '{' sentencias '}' "ELSE" '{' sentencias '}'  (42)

	'('  shift 88
	.  error


state 69
	expr : "CAST" . '<' tipoBasico '>' expr  (66)

	'<'  shift 89
	.  error


state 70
	sentencias : sentencias sentencia .  (27)

	.  reduce 27


state 71
	sentencia : expr . '=' expr ';'  (29)
	expr : expr . '+' expr  (47)
	expr : expr . '-' expr  (48)
	expr : expr . '*' expr  (49)
	expr : expr . '/' expr  (50)
	expr : expr . MAYORIGUAL expr  (51)
	expr : expr . MENORIGUAL expr  (52)
	expr : expr . '<' expr  (53)
	expr : expr . '>' expr  (54)
	expr : expr . DISTINTO expr  (55)
	expr : expr . IGUALDAD expr  (56)
	expr : expr . Y expr  (58)
	expr : expr . O expr  (59)
	expr : expr . '[' expr ']'  (67)
	expr : expr . '.' "IDENTIFICADOR"  (68)

	Y  shift 90
	O  shift 91
	DISTINTO  shift 92
	IGUALDAD  shift 93
	MAYORIGUAL  shift 94
	MENORIGUAL  shift 95
	'+'  shift 96
	'-'  shift 97
	'*'  shift 98
	'/'  shift 99
	'>'  shift 100
	'<'  shift 101
	'['  shift 102
	'.'  shift 103
	'='  shift 104
	.  error


state 72
	sentencia : escritura . ';'  (30)

	';'  shift 105
	.  error


state 73
	sentencia : if .  (33)

	.  reduce 33


state 74
	sentencia : invocacionFuncion . ';'  (35)

	';'  shift 106
	.  error


state 75
	defFuncion : "IDENTIFICADOR" '(' parametros ')' tipoRetorno '{' defVarLocales sentencias . '}'  (18)
	sentencias : sentencias . sentencia  (27)

	LITERAL_ENTERO  shift 54
	LITERAL_REAL  shift 55
	LITERAL_CARACTER  shift 56
	'!'  shift 57
	'('  shift 58
	"IDENTIFICADOR"  shift 59
	'{'  shift 60
	'}'  shift 107
	"READ"  shift 62
	"RETURN"  shift 63
	"WHILE"  shift 64
	"PRINT"  shift 65
	"PRINTSP"  shift 66
	"PRINTLN"  shift 67
	"IF"  shift 68
	"CAST"  shift 69
	.  error

	sentencia  goto 70
	expr  goto 71
	escritura  goto 72
	if  goto 73
	invocacionFuncion  goto 74


state 76
	expr : "IDENTIFICADOR" .  (60)
	expr : "IDENTIFICADOR" . '(' listaExprSeparador ')'  (69)

	'('  shift 108
	Y  reduce 60
	O  reduce 60
	DISTINTO  reduce 60
	IGUALDAD  reduce 60
	MAYORIGUAL  reduce 60
	MENORIGUAL  reduce 60
	'+'  reduce 60
	'-'  reduce 60
	'*'  reduce 60
	'/'  reduce 60
	'>'  reduce 60
	'<'  reduce 60
	'['  reduce 60
	']'  reduce 60
	'.'  reduce 60
	')'  reduce 60
	'}'  reduce 60
	';'  reduce 60
	','  reduce 60
	'='  reduce 60


state 77
	expr : expr . '+' expr  (47)
	expr : expr . '-' expr  (48)
	expr : expr . '*' expr  (49)
	expr : expr . '/' expr  (50)
	expr : expr . MAYORIGUAL expr  (51)
	expr : expr . MENORIGUAL expr  (52)
	expr : expr . '<' expr  (53)
	expr : expr . '>' expr  (54)
	expr : expr . DISTINTO expr  (55)
	expr : expr . IGUALDAD expr  (56)
	expr : '!' expr .  (57)
	expr : expr . Y expr  (58)
	expr : expr . O expr  (59)
	expr : expr . '[' expr ']'  (67)
	expr : expr . '.' "IDENTIFICADOR"  (68)

	'['  shift 102
	'.'  shift 103
	Y  reduce 57
	O  reduce 57
	DISTINTO  reduce 57
	IGUALDAD  reduce 57
	MAYORIGUAL  reduce 57
	MENORIGUAL  reduce 57
	'+'  reduce 57
	'-'  reduce 57
	'*'  reduce 57
	'/'  reduce 57
	'>'  reduce 57
	'<'  reduce 57
	']'  reduce 57
	')'  reduce 57
	'}'  reduce 57
	';'  reduce 57
	','  reduce 57
	'='  reduce 57


state 78
	expr : expr . '+' expr  (47)
	expr : expr . '-' expr  (48)
	expr : expr . '*' expr  (49)
	expr : expr . '/' expr  (50)
	expr : expr . MAYORIGUAL expr  (51)
	expr : expr . MENORIGUAL expr  (52)
	expr : expr . '<' expr  (53)
	expr : expr . '>' expr  (54)
	expr : expr . DISTINTO expr  (55)
	expr : expr . IGUALDAD expr  (56)
	expr : expr . Y expr  (58)
	expr : expr . O expr  (59)
	expr : '(' expr . ')'  (64)
	expr : expr . '[' expr ']'  (67)
	expr : expr . '.' "IDENTIFICADOR"  (68)

	Y  shift 90
	O  shift 91
	DISTINTO  shift 92
	IGUALDAD  shift 93
	MAYORIGUAL  shift 94
	MENORIGUAL  shift 95
	'+'  shift 96
	'-'  shift 97
	'*'  shift 98
	'/'  shift 99
	'>'  shift 100
	'<'  shift 101
	'['  shift 102
	'.'  shift 103
	')'  shift 109
	.  error


state 79
	invocacionFuncion : "IDENTIFICADOR" '(' . listaExprSeparador ')'  (43)
	invocacionFuncion : "IDENTIFICADOR" '(' . ')'  (44)
	expr : "IDENTIFICADOR" '(' . listaExprSeparador ')'  (69)

	LITERAL_ENTERO  shift 54
	LITERAL_REAL  shift 55
	LITERAL_CARACTER  shift 56
	'!'  shift 57
	'('  shift 58
	')'  shift 110
	"IDENTIFICADOR"  shift 76
	'{'  shift 60
	"CAST"  shift 69
	.  error

	expr  goto 111
	listaExprSeparador  goto 112


state 80
	expr : expr . '+' expr  (47)
	expr : expr . '-' expr  (48)
	expr : expr . '*' expr  (49)
	expr : expr . '/' expr  (50)
	expr : expr . MAYORIGUAL expr  (51)
	expr : expr . MENORIGUAL expr  (52)
	expr : expr . '<' expr  (53)
	expr : expr . '>' expr  (54)
	expr : expr . DISTINTO expr  (55)
	expr : expr . IGUALDAD expr  (56)
	expr : expr . Y expr  (58)
	expr : expr . O expr  (59)
	expr : '{' expr . '}'  (65)
	expr : expr . '[' expr ']'  (67)
	expr : expr . '.' "IDENTIFICADOR"  (68)

	Y  shift 90
	O  shift 91
	DISTINTO  shift 92
	IGUALDAD  shift 93
	MAYORIGUAL  shift 94
	MENORIGUAL  shift 95
	'+'  shift 96
	'-'  shift 97
	'*'  shift 98
	'/'  shift 99
	'>'  shift 100
	'<'  shift 101
	'['  shift 102
	'.'  shift 103
	'}'  shift 113
	.  error


state 81
	sentencia : "READ" expr . ';'  (31)
	expr : expr . '+' expr  (47)
	expr : expr . '-' expr  (48)
	expr : expr . '*' expr  (49)
	expr : expr . '/' expr  (50)
	expr : expr . MAYORIGUAL expr  (51)
	expr : expr . MENORIGUAL expr  (52)
	expr : expr . '<' expr  (53)
	expr : expr . '>' expr  (54)
	expr : expr . DISTINTO expr  (55)
	expr : expr . IGUALDAD expr  (56)
	expr : expr . Y expr  (58)
	expr : expr . O expr  (59)
	expr : expr . '[' expr ']'  (67)
	expr : expr . '.' "IDENTIFICADOR"  (68)

	Y  shift 90
	O  shift 91
	DISTINTO  shift 92
	IGUALDAD  shift 93
	MAYORIGUAL  shift 94
	MENORIGUAL  shift 95
	'+'  shift 96
	'-'  shift 97
	'*'  shift 98
	'/'  shift 99
	'>'  shift 100
	'<'  shift 101
	'['  shift 102
	'.'  shift 103
	';'  shift 114
	.  error


state 82
	exprOpt : expr .  (36)
	expr : expr . '+' expr  (47)
	expr : expr . '-' expr  (48)
	expr : expr . '*' expr  (49)
	expr : expr . '/' expr  (50)
	expr : expr . MAYORIGUAL expr  (51)
	expr : expr . MENORIGUAL expr  (52)
	expr : expr . '<' expr  (53)
	expr : expr . '>' expr  (54)
	expr : expr . DISTINTO expr  (55)
	expr : expr . IGUALDAD expr  (56)
	expr : expr . Y expr  (58)
	expr : expr . O expr  (59)
	expr : expr . '[' expr ']'  (67)
	expr : expr . '.' "IDENTIFICADOR"  (68)

	Y  shift 90
	O  shift 91
	DISTINTO  shift 92
	IGUALDAD  shift 93
	MAYORIGUAL  shift 94
	MENORIGUAL  shift 95
	'+'  shift 96
	'-'  shift 97
	'*'  shift 98
	'/'  shift 99
	'>'  shift 100
	'<'  shift 101
	'['  shift 102
	'.'  shift 103
	';'  reduce 36


state 83
	sentencia : "RETURN" exprOpt . ';'  (32)

	';'  shift 115
	.  error


state 84
	sentencia : "WHILE" '(' . expr ')' '{' sentencias '}'  (34)

	LITERAL_ENTERO  shift 54
	LITERAL_REAL  shift 55
	LITERAL_CARACTER  shift 56
	'!'  shift 57
	'('  shift 58
	"IDENTIFICADOR"  shift 76
	'{'  shift 60
	"CAST"  shift 69
	.  error

	expr  goto 116


state 85
	escritura : "PRINT" expr .  (38)
	expr : expr . '+' expr  (47)
	expr : expr . '-' expr  (48)
	expr : expr . '*' expr  (49)
	expr : expr . '/' expr  (50)
	expr : expr . MAYORIGUAL expr  (51)
	expr : expr . MENORIGUAL expr  (52)
	expr : expr . '<' expr  (53)
	expr : expr . '>' expr  (54)
	expr : expr . DISTINTO expr  (55)
	expr : expr . IGUALDAD expr  (56)
	expr : expr . Y expr  (58)
	expr : expr . O expr  (59)
	expr : expr . '[' expr ']'  (67)
	expr : expr . '.' "IDENTIFICADOR"  (68)

	Y  shift 90
	O  shift 91
	DISTINTO  shift 92
	IGUALDAD  shift 93
	MAYORIGUAL  shift 94
	MENORIGUAL  shift 95
	'+'  shift 96
	'-'  shift 97
	'*'  shift 98
	'/'  shift 99
	'>'  shift 100
	'<'  shift 101
	'['  shift 102
	'.'  shift 103
	';'  reduce 38


state 86
	escritura : "PRINTSP" expr .  (39)
	expr : expr . '+' expr  (47)
	expr : expr . '-' expr  (48)
	expr : expr . '*' expr  (49)
	expr : expr . '/' expr  (50)
	expr : expr . MAYORIGUAL expr  (51)
	expr : expr . MENORIGUAL expr  (52)
	expr : expr . '<' expr  (53)
	expr : expr . '>' expr  (54)
	expr : expr . DISTINTO expr  (55)
	expr : expr . IGUALDAD expr  (56)
	expr : expr . Y expr  (58)
	expr : expr . O expr  (59)
	expr : expr . '[' expr ']'  (67)
	expr : expr . '.' "IDENTIFICADOR"  (68)

	Y  shift 90
	O  shift 91
	DISTINTO  shift 92
	IGUALDAD  shift 93
	MAYORIGUAL  shift 94
	MENORIGUAL  shift 95
	'+'  shift 96
	'-'  shift 97
	'*'  shift 98
	'/'  shift 99
	'>'  shift 100
	'<'  shift 101
	'['  shift 102
	'.'  shift 103
	';'  reduce 39


state 87
	escritura : "PRINTLN" expr .  (40)
	expr : expr . '+' expr  (47)
	expr : expr . '-' expr  (48)
	expr : expr . '*' expr  (49)
	expr : expr . '/' expr  (50)
	expr : expr . MAYORIGUAL expr  (51)
	expr : expr . MENORIGUAL expr  (52)
	expr : expr . '<' expr  (53)
	expr : expr . '>' expr  (54)
	expr : expr . DISTINTO expr  (55)
	expr : expr . IGUALDAD expr  (56)
	expr : expr . Y expr  (58)
	expr : expr . O expr  (59)
	expr : expr . '[' expr ']'  (67)
	expr : expr . '.' "IDENTIFICADOR"  (68)

	Y  shift 90
	O  shift 91
	DISTINTO  shift 92
	IGUALDAD  shift 93
	MAYORIGUAL  shift 94
	MENORIGUAL  shift 95
	'+'  shift 96
	'-'  shift 97
	'*'  shift 98
	'/'  shift 99
	'>'  shift 100
	'<'  shift 101
	'['  shift 102
	'.'  shift 103
	';'  reduce 40


state 88
	if : "IF" '(' . expr ')' '{' sentencias '}'  (41)
	if : "IF" '(' . expr ')' '{' sentencias '}' "ELSE" '{' sentencias '}'  (42)

	LITERAL_ENTERO  shift 54
	LITERAL_REAL  shift 55
	LITERAL_CARACTER  shift 56
	'!'  shift 57
	'('  shift 58
	"IDENTIFICADOR"  shift 76
	'{'  shift 60
	"CAST"  shift 69
	.  error

	expr  goto 117


state 89
	expr : "CAST" '<' . tipoBasico '>' expr  (66)

	"INT"  shift 118
	"FLOAT"  shift 119
	"CHAR"  shift 120
	.  error

	tipoBasico  goto 121


state 90
	expr : expr Y . expr  (58)

	LITERAL_ENTERO  shift 54
	LITERAL_REAL  shift 55
	LITERAL_CARACTER  shift 56
	'!'  shift 57
	'('  shift 58
	"IDENTIFICADOR"  shift 76
	'{'  shift 60
	"CAST"  shift 69
	.  error

	expr  goto 122


state 91
	expr : expr O . expr  (59)

	LITERAL_ENTERO  shift 54
	LITERAL_REAL  shift 55
	LITERAL_CARACTER  shift 56
	'!'  shift 57
	'('  shift 58
	"IDENTIFICADOR"  shift 76
	'{'  shift 60
	"CAST"  shift 69
	.  error

	expr  goto 123


state 92
	expr : expr DISTINTO . expr  (55)

	LITERAL_ENTERO  shift 54
	LITERAL_REAL  shift 55
	LITERAL_CARACTER  shift 56
	'!'  shift 57
	'('  shift 58
	"IDENTIFICADOR"  shift 76
	'{'  shift 60
	"CAST"  shift 69
	.  error

	expr  goto 124


state 93
	expr : expr IGUALDAD . expr  (56)

	LITERAL_ENTERO  shift 54
	LITERAL_REAL  shift 55
	LITERAL_CARACTER  shift 56
	'!'  shift 57
	'('  shift 58
	"IDENTIFICADOR"  shift 76
	'{'  shift 60
	"CAST"  shift 69
	.  error

	expr  goto 125


state 94
	expr : expr MAYORIGUAL . expr  (51)

	LITERAL_ENTERO  shift 54
	LITERAL_REAL  shift 55
	LITERAL_CARACTER  shift 56
	'!'  shift 57
	'('  shift 58
	"IDENTIFICADOR"  shift 76
	'{'  shift 60
	"CAST"  shift 69
	.  error

	expr  goto 126


state 95
	expr : expr MENORIGUAL . expr  (52)
